Alteração no título do projeto

--- a/Projeto2.index.html
+++ b/Projeto2.index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Positive</title>
+    <title>Projeto Positive - Css</title>
     <link rel="stylesheet" href="./Projeto2.styles.css">
 </head>
 
